[package]
name = "rust-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day_1"
path = "src/day_1/bin/main.rs"

[[bin]]
name = "day_2"
path = "src/day_2/bin/main.rs"

[[bin]]
name = "day_3"
path = "src/day_3/bin/main.rs"

[[bin]]
name = "day_4"
path = "src/day_4/bin/main.rs"

[[bin]]
name = "day_5"
path = "src/day_5/bin/main.rs"

[dependencies]
