[package]
name = "rust-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoc_utils"
path = "src/lib/mod.rs"

[[bin]]
name = "day_1"
path = "src/day_1/bin/main.rs"

[[bin]]
name = "day_2"
path = "src/day_2/bin/main.rs"

[[bin]]
name = "day_3"
path = "src/day_3/bin/main.rs"

[[bin]]
name = "day_4"
path = "src/day_4/bin/main.rs"

[[bin]]
name = "day_5"
path = "src/day_5/bin/main.rs"

[[bin]]
name = "day_6"
path = "src/day_6/bin/main.rs"

[[bin]]
name = "day_7"
path = "src/day_7/bin/main.rs"

[[bin]]
name = "day_8"
path = "src/day_8/bin/main.rs"

[[bin]]
name = "day_9"
path = "src/day_9/bin/main.rs"

[dependencies]
